welcome.lessons.welcome.variables.Variables.scala.error
Variables:9: error: type mismatch;
 found   : Boolean
 required: Int
while (dejaFait!==nbPas) {
               ^